--- a/thesis.tex
+++ b/thesis.tex
@@ -14,6 +14,7 @@
                      %showframe,				% This shows the frame
                      twoside, includehead,
                      footskip=7mm, headsep=6mm, headheight=4.8mm,
+                     marginparsep=2mm, marginparwidth=22mm,
                      top=25mm, bottom=25mm, inner=30mm, outer=25mm]{geometry}
 \usepackage{sansmathfonts}				% Sans Serif equations
 \usepackage[T1]{fontenc}					% Output font encoding for international characters
