--- a/appendices/appendix1.tex
+++ b/appendices/appendix1.tex
@@ -1,6 +1,6 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = ../thesis.tex
-\chapter{Apéndice 1} \label{app1}
+\chapter{Título del Apéndice} \label{app1}
 Este es un apéndice.
 
 \textit{Esto es texto en itálica}.
