--- a/preamble/abstract.tex
+++ b/preamble/abstract.tex
@@ -1,4 +1,4 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = ../thesis.tex
 \chapter*{Abstract}
-Here it goes the abstract of the full thesis. Same restrictions as in \emph{Resumen} apply.
+Here goes the abstract of the thesis. Same restrictions as in \emph{Resumen} apply.
