--- a/preamble/copyright.tex
+++ b/preamble/copyright.tex
@@ -4,4 +4,4 @@
 \noindent \@author: \@title. \textit{Tesis presentada como requisito parcial para acceder al grado de \textbf{\@degree} del Instituto Tecnológico de Buenos Aires}.
 \par
 \vspace{1\baselineskip}
-\noindent Copyright \textcopyright\space\@copyrightYear\space by \@author
+\noindent Copyright \textcopyright\space\@copyrightYear\space by Instituto Tecnológico de Buenos Aires
