--- a/preamble/symbols.tex
+++ b/preamble/symbols.tex
@@ -1,6 +1,6 @@
 % !TEX encoding = UTF-8 Unicode
 % !TEX root = ../thesis.tex
-\chapter{Símbolos y Abreviaturas}
+\chapter{Símbolos y abreviaturas}
 %\addcontentsline{toc}{chapter}{Símbolos y Abreviaturas}
 \markboth{\MakeUppercase{Símbolos y Abreviaturas}}{\MakeUppercase{Símbolos y Abreviaturas}}
 \section*{Letras}
