--- a/preamble/title_data.tex
+++ b/preamble/title_data.tex
@@ -2,8 +2,8 @@
 % !TEX root = ../thesis.tex
 \title{TÍTULO DEL TRABAJO}
 \subtitle{Subtítulo del trabajo (si lo hubiere)}
-\author{Ing. Nombre \textsc{Apellido}}
-\degree{DOCTOR EN INGENIERÍA / INGENIERÍA INFORMÁTICA}
+\author{Ing/Lic./Alien Nombre \textsc{Apellido}}
+\degree{DOCTOR EN INGENIERÍA / DOCTOR EN INGENIERÍA INFORMÁTICA}
 \director{Dr./Dra. Nombre \textsc{Apellido}}
 \codirector{Dr./Dra. Nombre \textsc{Apellido}}
 \firstEvaluator{Dr./Dra. Nombre \textsc{Apellido}}
@@ -11,3 +11,7 @@
 \thirdEvaluator{Dr./Dra. Nombre \textsc{Apellido}}
 \date{\fecha}
 \copyrightYear{\number\year}
+
+\engtitle{THESIS TITLE}
+\engsubtitle{Thesis subtitle (if required)}
+\engdate{\edate}
