--- a/preamble/user_packages.tex
+++ b/preamble/user_packages.tex
@@ -3,5 +3,6 @@
 % Put your document packages here
 \usepackage{lipsum}
 \usepackage{layouts}
+\usepackage{multirow}
 \printinunitsof{mm}
 %\nobibliography*						% To make bibliography works
