--- a/preamble/title_data.tex
+++ b/preamble/title_data.tex
@@ -12,6 +12,6 @@
 \date{\fecha}
 \copyrightYear{\number\year}
 
-\engtitle{THESIS TITLE}
-\engsubtitle{Thesis subtitle (if required)}
-\engdate{\edate}
+\titleEN{THESIS TITLE}
+\subtitleEN{Thesis subtitle (if required)}
+\dateEN{\edate}
