--- a/thesis.tex
+++ b/thesis.tex
@@ -13,7 +13,7 @@
                      marginparsep=2mm, marginparwidth=22mm,
                      top=25mm, bottom=25mm, inner=30mm, outer=25mm]{geometry}
 \usepackage{sansmathfonts}				% Sans Serif equations
-\usepackage[T1]{fontenc}					% Output font encoding for international characters
+%\usepackage[T1]{fontenc}					% Output font encoding for international characters
 
 \usepackage[utf8]{inputenc}				% Encoding of files: utf8
 \renewcommand*\familydefault{\sfdefault} 	% Sans Serif as default font
